WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152737
[JSC] Get more of testb3 to pass on ARM64
https://bugs.webkit.org/show_bug.cgi?id=152737
Summary
[JSC] Get more of testb3 to pass on ARM64
Benjamin Poulain
Reported
2016-01-05 10:38:03 PST
[JSC] Get more of testb3 to pass on ARM64
Attachments
Patch
(25.62 KB, patch)
2016-01-05 10:40 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(25.53 KB, patch)
2016-01-05 10:47 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(25.56 KB, patch)
2016-01-05 12:22 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(25.60 KB, patch)
2016-01-05 13:38 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-01-05 10:40:08 PST
Created
attachment 268289
[details]
Patch
Benjamin Poulain
Comment 2
2016-01-05 10:47:56 PST
Created
attachment 268290
[details]
Patch
Geoffrey Garen
Comment 3
2016-01-05 10:52:04 PST
Last 500 characters of output: sembler/AssemblerCommon.h:55:13: error: unused function 'isValidSignedImm9' [-Werror,-Wunused-function] static bool isValidSignedImm9(int32_t value)
Benjamin Poulain
Comment 4
2016-01-05 12:22:10 PST
Created
attachment 268305
[details]
Patch
Benjamin Poulain
Comment 5
2016-01-05 13:38:10 PST
Created
attachment 268319
[details]
Patch
Benjamin Poulain
Comment 6
2016-01-05 14:21:40 PST
Comment on
attachment 268319
[details]
Patch Small stuffs.
Geoffrey Garen
Comment 7
2016-01-05 14:25:47 PST
Comment on
attachment 268319
[details]
Patch r=me
Filip Pizlo
Comment 8
2016-01-05 14:40:28 PST
Comment on
attachment 268319
[details]
Patch LGTM too
WebKit Commit Bot
Comment 9
2016-01-06 02:43:18 PST
Comment on
attachment 268319
[details]
Patch Clearing flags on attachment: 268319 Committed
r194635
: <
http://trac.webkit.org/changeset/194635
>
WebKit Commit Bot
Comment 10
2016-01-06 02:43:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug